fix: adjust width of containerImageWorkers for better layout on mobile

--- a/src/components/cardAbout/cardAbout.css
+++ b/src/components/cardAbout/cardAbout.css
@@ -122,7 +122,7 @@
     }
     
     .containerImageWorkers{
-        width: 125px;
+        width: 200px;
     }
 
     .image-worker{
